add readme doc
